discussion/kv_engine/169978/169978_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP - try to remove MetaRead and ReadSeqno

Change-Id: If991e61073cec1f9049454a7be364080a25e13d0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-03 14:02:10.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-03 14:29:15.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14165/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/rbac/privilege_database.cc b/rbac/privilege_database.cc
index 6fce0b4e8..99223c65f 100644
--- a/rbac/privilege_database.cc
+++ b/rbac/privilege_database.cc
@@ -313,7 +313,8 @@ PrivilegeAccess Bucket::check(Privilege privilege,
     return status;
 }
 
-PrivilegeAccess Bucket::checkForPrivilegeAtLeastInOneCollection(Privilege privilege) const {
+PrivilegeAccess Bucket::checkForPrivilegeAtLeastInOneCollection(
+        Privilege privilege) const {
     if (privilegeMask.test(uint8_t(privilege))) {
         return PrivilegeAccessOk;
     }

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14165/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15322/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2318:21: error: invalid use of non-static data member "cookie" [clang-diagnostic-error]
                    cookie, cb::engine_errc::success);
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15322/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2318:21:
error: invalid use of non-static data member "cookie" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15322/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43569/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_test.cc(2318): error C2327: "EventuallyPersistentEngineTest::cookie": is not a type name, static, or enumerator ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43569/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16139/ : FAILURE

Compile error at [2022-02-03T14:18:01.070Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2318:21:
error: invalid use of non-static data member "cookie"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16139/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4970/ : FAILURE

Compile error at [2022-02-03T14:20:33.041Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2318:21:
error: invalid use of non-static data member "cookie"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4970/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17356/ : FAILURE

Compile error at [2022-02-03T14:22:23.794Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2318:21:
error: invalid use of non-static data member ?EventuallyPersistentEngineTest::cookie?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17356/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18097/ : FAILURE

Compile error at [2022-02-03T14:24:07.038Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2318:21:
error: invalid use of non-static data member "cookie"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18097/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5030/ : FAILURE

Compile error at [2022-02-03T14:21:51.779Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2318:21:
error: invalid use of non-static data member ?EventuallyPersistentEngineTest::cookie?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5030/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17046/ : FAILURE

Compile error at [2022-02-03T14:24:06.172Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2318:21:
error: invalid use of non-static data member ?EventuallyPersistentEngineTest::cookie?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17046/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25452/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36767/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
